@@ -831,4 +831,5 @@ tasks.register("buildAll", GradleBuild) {
 //     args = [
 //             "--enable-native-access=ALL-UNNAMED"
 //     ]
+//     jvmArgs = ["--enable-native-access=ALL-UNNAMED"]
 // }
